*  调整 fba_carton_contents

--- a/core/app/views/Deliveryments/fba_carton_contents.html
+++ b/core/app/views/Deliveryments/fba_carton_contents.html
@@ -2,7 +2,7 @@
 <div id="fba_carton_contents_modal" class="modal hide fade">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3>FBA Carton Contents</h3>默认数据来源于供应商的产品
+    <h3>FBA Carton Contents</h3><p class="muted">默认数据来源于供应商的产品</p>
   </div>
   <div class="modal-body">
     <table class="table table-bordered table-condensed" id="fba_carton_contents_table">
