--- a/core/app/views/gt_templates/feeds.html
+++ b/core/app/views/gt_templates/feeds.html
@@ -1,3 +1,4 @@
+#{script 'procureunits/_unit_list.coffee'/}
 <table class="table table-condensed table-bordered" style="display:none" data-feeds-page-key="${key ? key : ''}">
   <tr>
     <th>Id</th>
