*  传入 sid 时主动初始化采购计划的 Selling

--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -106,7 +106,7 @@
   </td>
 </tr>
 <input type="hidden" name="unit.shipmentId" value="${unit.shipmentId}" id="shipmentId">
-<input type="hidden" name="to_page" value="#{if sid} analysis #{/if} #{else } index #{/else}">
+<input type="hidden" name="to_page" value="${sid != null ? 'analysis' : 'index'}">
 
 
 
