--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -64,6 +64,9 @@
               #{if dmt.canBeEdit()}
                 <button class="btn btn-primary">提交</button>
               #{/if}
+              #{else }
+                <input type="button" id="edit_memo" class="btn btn-primary" value="修改备注"/>
+              #{/else}
           #{/power.ck}
           #{power.ck 'deliveryments.cancel'}
               #{if dmt.canBeCancle()}
