--- a/core/app/views/FBAs/fba.html
+++ b/core/app/views/FBAs/fba.html
@@ -1,5 +1,4 @@
-<table border="0" style="border: none;display:inline-block;" cellpadding="0" cellspacing="0"
-       width="100%">
+<table border="0" style="border: none;display:inline-block;" cellpadding="0" cellspacing="0" width="100%">
   <tr>
     <td colspan="3" align="center" style="color: #666666; font-weight: bold;font-size: 10pt;">
       PLEASE LEAVE THIS LABEL UNCOVERED<br>
@@ -15,23 +14,19 @@
   <tr valign="top">
     <td width="50%" colspan="2" style="font-size:10px;line-height:10px;">
       <b>SHIP FROM:</b><br>
-
     ${shipFrom?.name}<br>
     ${shipFrom?.addressLine1}<br>
     ${shipFrom?.city},&nbsp;
     ${shipFrom?.stateOrProvinceCode}&nbsp;
     ${shipFrom?.postalCode}<br>
-
     </td>
     <td width="50%" align="left" style="font-size: 12px;">
       <b> SHIP TO:</b><br>
-
       <b>${fba?.fbaCenter?.name}</b><br>
       <b>${fba?.fbaCenter?.addressLine1}</b><br>
       <b>${fba?.fbaCenter?.postalCode}</b>
       <b>${fba?.fbaCenter?.city}</b><br>
       <b>${fba?.codeToCounrty()}</b><br>
-
     </td>
   </tr>
   <tr bgcolor="black">
@@ -48,7 +43,8 @@
   <tr>
     <td align="center" colspan="3">
       <!-- 需要生成的 Bar Code -->
-      #{set shipmentIdStr: shipmentId + boxNumber/}
+      #{set boxNum: helper.Webs.hundredNumber(i)/}
+      #{set shipmentIdStr: shipmentId + boxNum/}
       <img src="http://127.0.0.1:9000/code128/${shipmentIdStr}" width="260"
            height="72" border="0" style="padding-left:30px">
       <!-- 测试用  -->
