*  输入框的最大长度设置为 4

--- a/core/app/views/Deliveryments/fba_carton_contents.html
+++ b/core/app/views/Deliveryments/fba_carton_contents.html
@@ -18,16 +18,16 @@
           <abbr title="单个尾箱内货物的个数(默认只有一个尾箱)">个数(尾箱)</abbr>
         </td>
         <td>
-          <abbr title="单个箱子的重量">箱重(lbs.)</abbr>
+          <abbr title="单个箱子的重量">箱重</abbr>
         </td>
         <td>
-          <abbr title="单个箱子的长度">箱长(in.)</abbr>
+          <abbr title="单个箱子的长度">箱长</abbr>
         </td>
         <td>
-          <abbr title="单个箱子的宽度">箱宽(in.)</abbr>
+          <abbr title="单个箱子的宽度">箱宽</abbr>
         </td>
         <td>
-          <abbr title="单个箱子的高度">箱高(in.)</abbr>
+          <abbr title="单个箱子的高度">箱高</abbr>
         </td>
       </tr>
     </table>
