--- a/core/app/views/Application/index.html
+++ b/core/app/views/Application/index.html
@@ -2,7 +2,7 @@
 #{set title:'Home' /}
 #{set 'moreScripts'}
     #{script 'highstock.js'/}
-    #{script 'Application/app.coffee'/}
+    #{script 'Application/app.js'/}
 #{/set}
 
 #{info_row title:'FBA 仓库库存容量总览'/}
