--- a/core/app/views/Users/index.html
+++ b/core/app/views/Users/index.html
@@ -2,7 +2,7 @@
 #{set title:'用户管理界面 (' + users.size() + ')'/}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
-    #{script 'users/index.coffee'/}
+    #{script 'users/index.js'/}
     #{script 'component/notify.coffee'/}
 #{/set}
 
