--- a/core/app/views/Sellings/_amazon.html
+++ b/core/app/views/Sellings/_amazon.html
@@ -14,7 +14,7 @@
     <button class="btn btn-warning" id="amz-sync" content="从 Amazon 同步回来更新到数据库"
             placement='bottom' rel="popover" title="Sync From Amazon Button">Sync
     </button>
-    <button class="btn btn-warning" id="amz-part-update" data-url="@{Sellings.amazon_update()}"
+    <button class="btn btn-warning" id="amz-part-update" data-url="@{Sellings.partialUpdate()}"
             content="AMZ局部更新" placement='bottom' rel="popover">Deploy Part
     </button>
     <button class="btn btn-warning" id="img_cal" content="图片按照 0~8 设置好编号以后,点击此按钮更新到AMAZON." placement='bottom'
