--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -186,7 +186,7 @@
 
             电      话：0755-21383192-8060/8061
 
-            收货联系人：杨上德：13724219910（保护类、蓝牙类）
+            收货联系人：杨上德：13724219110（保护类、蓝牙类）
                       陈静林：15711961308（电源、充电器类、瑞能，布兰德沃）
                       旷   杰：18692275630（仓管）
                       方   圆：15974143832（经理）
@@ -197,8 +197,7 @@
         <tr>
           <th>交易条款<br>(供应商)</th>
           <td colspan="3">
-          <textarea rows="8" name="excel.tradeTerms" id="excel_tradeTerms" class="span12"> ${dmt.cooperator
-          .tradingTerms}</textarea>
+          <textarea rows="8" name="excel.tradeTerms" id="excel_tradeTerms" class="span12"> ${dmt.cooperator.tradingTerms}</textarea>
           </td>
           <th>产品要求<br>(产品线)</th>
           <td colspan="3">
