--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -1,6 +1,6 @@
 #{script 'procureunits/_unit_list.coffee'/}
 #{set tr_key: key ? key : 'unit'/}
-<table class="table table-condensed table-bordered">
+<table class="table table-condensed table-bordered" id="unit_table">
   <tr>
   #{if checkbox}
     <th>
