FBA ZIP包添加made in china字体

--- a/core/app/views/FBAs/fba.html
+++ b/core/app/views/FBAs/fba.html
@@ -63,9 +63,12 @@
   </tr>
   <tr>
     <td colspan="3">
-            <span style="font-size: 14px;font-weight:bold;float:right;">
-            Verschiedene SKUs
-            </span>
+      <span style="font-size: 14px;font-weight:bold;float:right;">Verschiedene SKUs</span>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <span style="font-size: 14px;font-weight:bold;float:right;">Made in China</span>
     </td>
   </tr>
 </table>
