--- a/core/app/views/FBAs/shipmentDetail.html
+++ b/core/app/views/FBAs/shipmentDetail.html
@@ -1,5 +1,4 @@
-<table border="0" style="border: none;margin:0 0 0 0;display:inline-block;" cellpadding="0" cellspacing="0"
-       width="100%">
+<table border="0" style="border: none;margin:0 0 0 0;display:inline-block;" cellpadding="0" cellspacing="0" width="100%">
   <tr style="border-bottom: 2px solid black">
     <td colspan="7" align="center" style="font-weight: bold;font-size: 6pt;border-bottom: 2px solid black">
       <div style="float:left;">
@@ -108,9 +107,13 @@
     </td>
   </tr>
   <tr>
-    <td align="center" style=" font-size: 8px;">
-      INTERNAL USE
-    </td>
+    <td align="center" style="font-size: 8px;">INTERNAL USE</td>
+  </tr>
+  <tr>
+    <td></td>
+  </tr>
+  <tr>
+    <td align="center" style="font-size: 14px;">Made in China</td>
   </tr>
 </table>
 
