--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -24,7 +24,7 @@
 #{set isNew:copItem.id == null || copItem.id <= 0/}
 #{set action:isNew? '/Cooperators/saveCooperItem' : '/Cooperators/updateCooperItem'/}
   <form action="${action}" method="post" autocomplete="off">
-    <table class="table table-condensed table-bordered">
+    <table class="table table-condensed table-bordered" id="form_table">
       <tr>
         <td>SKU</td>
         <td>
@@ -50,33 +50,83 @@
         <td>最低采购量</td>
         <td><input type="text" class="input-mini" name="copItem.lowestOrderNum" value="${copItem.lowestOrderNum}"></td>
       </tr>
-
+    #{if copItem.items.size()>0}
       <tr>
-        <td>每箱数量</td>
-        <td>
-          <input type="text" class="input-mini" name="copItem.boxSize" value="${copItem.boxSize}">
-        </td>
-        <td>单箱重量</td>
-        <td>
-          <input type="text" class="input-mini" name="copItem.singleBoxWeight" value="${copItem.singleBoxWeight}">
+        <td colspan="4" id="addTd">
+            #{list copItem.items, as:'item'}
+              <div class="alert alert-info" id="add_div_${item_index}"><h4>方案${item_index}(${item.schemeName})</h4></div>
+              <table class="table table-condensed table-bordered" id="add_table_${item_index}">
+                <tr>
+                  <td>每箱数量</td>
+                  <td>
+                    <input type="text" class="input-mini" name="copItem.items[${item_index-1}].boxSize" value="${item.boxSize}">
+                  </td>
+                  <td>单箱重量</td>
+                  <td>
+                    <input type="text" class="input-mini" name="copItem.items[${item_index-1}].singleBoxWeight"
+                           value="${item.singleBoxWeight}">
+                  </td>
+                </tr>
+                <tr>
+                  <td>箱长</td>
+                  <td>
+                    <input type="text" class="input-mini" name="copItem.items[${item_index-1}].length" value="${item.length}">
+                  </td>
+                  <td>箱宽</td>
+                  <td>
+                    <input type="text" class="input-mini" name="copItem.items[${item_index-1}].width" value="${item.width}">
+                  </td>
+                </tr>
+                <tr>
+                  <td>箱高</td>
+                  <td>
+                    <input type="text" class="input-mini" name="copItem.items[${item_index-1}].height" value="${item.height}">
+                  </td>
+                  <td>方案名</td>
+                  <td>
+                    <input type="text" name="copItem.items[${item_index-1}].schemeName" value="${item.schemeName}">
+                  </td>
+                </tr>
+              </table>
+            #{/list}
         </td>
       </tr>
-
+    #{/if}
+    #{else }
       <tr>
-        <td>箱长</td>
-        <td>
-          <input type="text" class="input-mini" name="copItem.length" value="${copItem.length}">
-        </td>
-        <td>箱宽</td>
-        <td>
-          <input type="text" class="input-mini" name="copItem.width" value="${copItem.width}">
+        <td colspan="4" id="addTd">
+          <div class="alert alert-info" id="add_div_1"><h4>方案1</h4></div>
+          <table class="table table-condensed table-bordered">
+            <tr>
+              <td>每箱数量</td>
+              <td><input type="text" class="input-mini" name="copItem.items[0].boxSize" value="${copItem.boxSize}"></td>
+              <td>单箱重量</td>
+              <td>
+                <input type="text" class="input-mini" name="copItem.items[0].singleBoxWeight" value="${copItem.singleBoxWeight}">
+              </td>
+            </tr>
+            <tr>
+              <td>箱长</td>
+              <td><input type="text" class="input-mini" name="copItem.items[0].length" value="${copItem.length}"></td>
+              <td>箱宽</td>
+              <td><input type="text" class="input-mini" name="copItem.items[0].width" value="${copItem.width}"></td>
+            </tr>
+            <tr>
+              <td>箱高</td>
+              <td><input type="text" class="input-mini" name="copItem.items[0].height" value="${copItem.height}"></td>
+              <td>方案名</td>
+              <td>
+                <input type="text" name="copItem.items[${item_index-1}].schemeName" value="${item.schemeName}">
+              </td>
+            </tr>
+          </table>
         </td>
       </tr>
-
+    #{/else}
       <tr>
-        <td>箱高</td>
-        <td colspan="3">
-          <input type="text" class="input-mini" name="copItem.height" value="${copItem.height}">
+        <td colspan="4" style="text-align:right">
+          <input type="button" id="addBtn" class="btn btn-primary" value="添加方案"/>
+          <input type="button" id="delBtn" class="btn btn-danger" value="删除方案"/>
         </td>
       </tr>
 
@@ -104,3 +154,30 @@
     </table>
   </form>
 </div>
+
+
+<script type="text/template" id='add_template'>
+  <div class="alert alert-info" id="add_div_<%= num+1%>"><h4>方案<%= num+1%></h4></div>
+  <table class="table table-condensed table-bordered" id="add_table_<%= num+1%>">
+    <tr>
+      <td>每箱数量</td>
+      <td><input type="text" class="input-mini" name="copItem.items[<%= num%>].boxSize"></td>
+      <td>单箱重量</td>
+      <td>
+        <input type="text" class="input-mini" name="copItem.items[<%= num%>].singleBoxWeight">
+      </td>
+    </tr>
+    <tr>
+      <td>箱长</td>
+      <td><input type="text" class="input-mini" name="copItem.items[<%= num%>].length"></td>
+      <td>箱宽</td>
+      <td><input type="text" class="input-mini" name="copItem.items[<%= num%>].width"></td>
+    </tr>
+    <tr>
+      <td>箱高</td>
+      <td><input type="text" class="input-mini" name="copItem.items[<%= num%>].height"></td>
+      <td>方案名</td>
+      <td><input type="text" name="copItem.items[<%= num%>].schemeName"></td>
+    </tr>
+  </table>
+</script>
