--- a/core/app/views/Deliveryments/fba_carton_contents.html
+++ b/core/app/views/Deliveryments/fba_carton_contents.html
@@ -1,35 +1,11 @@
 #{script 'deliveryments/fba_carton_contents.coffee'/}
-<div id="fba_carton_contents_modal" class="modal hide fade">
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3>FBA Carton Contents</h3><p class="muted">默认数据来源于供应商的产品</p>
   </div>
   <div class="modal-body">
-    <table class="table table-bordered table-condensed" id="fba_carton_contents_table">
-      <tr>
-        <td>采购计划</td>
-        <td>
-          <abbr title="多少个箱子(不包含尾箱)">箱数(仅含主箱)</abbr>
-        </td>
-        <td>
-          <abbr title="单个主箱内货物的个数">个数(主箱)</abbr>
-        </td>
-        <td>
-          <abbr title="单个尾箱内货物的个数(默认只有一个尾箱)">个数(尾箱)</abbr>
-        </td>
-        <td>
-          <abbr title="单个箱子的重量">箱重</abbr>
-        </td>
-        <td>
-          <abbr title="单个箱子的长度">箱长</abbr>
-        </td>
-        <td>
-          <abbr title="单个箱子的宽度">箱宽</abbr>
-        </td>
-        <td>
-          <abbr title="单个箱子的高度">箱高</abbr>
-        </td>
-      </tr>
+      <div id="refresh_div"></div>
     </table>
   </div>
   <div class="modal-footer">
